ui/scss/component/_claim-list.scss
/* ... */
.claim-preview__custom-properties {
  text-align: right;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.claim-preview-metadata {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.claim-preview-metadata-sub-upload {
  position: relative;
  //margin-left: 4px;
  display: flex;
  text-align: left;
}

.claim-preview-info {
  align-items: flex-start;
}

.claim-preview-info,
.claim-preview-properties {
  display: flex;
  justify-content: space-between;
}

.claim-preview__actions {
  align-self: flex-end;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-top: var(--spacing-xs);
  width: 100%;

  .button--alt {
    color: white;
    background-color: var(--color-primary);
  }

  @media (min-width: $breakpoint-small) {
    flex-direction: row;
  }
}

.claim-preview__primary-actions {
  @extend .section__actions;
  margin-right: 0;

  &:first-child {
    .button {
      background-color: var(--color-primary);
    }
  }
}

.claim-preview__actions--header {
  @extend .claim-preview__actions;
  flex-wrap: wrap;
}

.claim-preview__button {
  margin-left: 2rem;
}

.claim-preview-properties {
  align-items: flex-end;
  flex: 1;
  font-size: var(--font-small);
  color: var(--color-text-subtitle);
}

.claim-upload {
  flex: 1;
  display: flex;
  position: relative;
  overflow: visible;
  padding: var(--spacing-m);

  .media__thumb {
    width: var(--file-list-thumbnail-width);
    flex-shrink: 0;
    margin-right: var(--spacing-s);
  }
}

.claim-upload__progress--label {
  font-size: var(--font-small);
  color: var(--color-text-subtitle);
}

.claim-upload__progress--outer {
  width: 100%;
}

.claim-upload__progress--inner {
  background: var(--color-secondary);
  padding: var(--spacing-xxs);
  height: 2.4rem;
}

.claim-upload__progress--inner-text {
  position: absolute;
  color: #000000;
  width: 80%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

//
// The _other_ way to view claims
// A grid of tiles
// It should probably go into it's own file once we add more to it
//
.claim-grid {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  align-items: flex-start;
}

.claim-grid__wrapper {
  display: flex;
  flex-direction: column;
  margin-top: var(--spacing-s);
  padding-bottom: var(--spacing-l);
  //border-bottom: 1px solid var(--color-border);

  @media (max-width: $breakpoint-small) {
    &:not(:first-of-type) {
      margin-top: var(--spacing-s);
    }
  }
}

.claim-grid__header {
  margin-top: var(--spacing-m);
  margin-bottom: var(--spacing-m);
  display: flex;
  align-items: center;

  .button {
    &:hover {
      text-decoration: none;
    }
  }

  .icon__wrapper {
    width: 0.5rem;
    height: 0.5rem;
    background-color: var(--color-header-background);
    margin-right: var(--spacing-m);

    .icon {
      stroke: var(--color-text);
    }

    @media (min-width: $breakpoint-small) {
      height: 1.5rem;
      width: 1.5rem;
    }
  }

  .button__content {
    &:hover {
      .claim-grid__title {
        color: var(--color-primary);
      }
      .icon {
        stroke: var(--color-primary);
      }
    }
  }
}

.claim-grid__header--between {
  justify-content: space-between;
}

.claim-grid__title {
  font-weight: 300;
  font-size: var(--font-large);
  margin-right: var(--spacing-m);
  display: flex;
  color: var(--color-text);
}

.claim-grid__title-span {
  display: flex;
  // margin-top:var(--spacing-m);

  &:hover {
    color: var(--color-primary);
  }
}

.claim-grid__title--empty {
  color: var(--color-text-help);
  margin-left: var(--spacing-s);
}

.claim-grid__title--first {
  text-align: center;
  width: 100%;
  margin-bottom: var(--spacing-l);

  .no-evil {
    font-size: var(--font-heading);
  }
}

.claim-grid__title--secondary {
  margin-left: auto;
}

.claim-grid__help {
  margin-bottom: 12px;

  svg {
    stroke: var(--color-text-subtitle);
  }
}

.claim-preview--tile {
  margin-bottom: var(--spacing-m);
  margin-right: 0;
  margin-top: 0;
  margin-left: var(--spacing-m);
  justify-content: flex-start;
  list-style: none;

  // Hover Zoom Effect
  .media__thumb {
    background-size: 100%;
    transition: background-size 0.2s ease-in-out;
  }

  &:hover {
    cursor: pointer;

    .media__thumb {
      box-shadow: 0px 0px 0px 1px rgba(var(--color-primary-dynamic), 1) inset;
      background-size: 108%;
    }

    .claim-tile__title {
      color: var(--color-primary);
    }

    .claim__menu-button {
      opacity: 1;
    }
    .collection-preview__overlay-thumbs {
      opacity: 1;
      transition: 0.3s;
    }
  }

  @media (min-width: $breakpoint-large) {
    $width: calc((100% - var(--spacing-m) * 5) / 6);
    width: $width;
    @include handleClaimTileGifThumbnail($width);

    &:first-child,
    &:nth-child(6n + 1) {
      margin-left: 0;
    }
  }

  @media (max-width: $breakpoint-large) and (min-width: $breakpoint-medium) {
    $width: calc((100% - var(--spacing-m) * 3) / 4);
    width: $width;
    @include handleClaimTileGifThumbnail($width);

    &:first-child,
    &:nth-child(4n + 1) {
      margin-left: 0;
    }
  }

  @media (max-width: $breakpoint-medium) and (min-width: $breakpoint-small) {
    $width: calc((100vw - var(--side-nav-width--micro) - var(--spacing-xl) * 3) / 3);
    width: $width;
    @include handleClaimTileGifThumbnail($width);

    &:first-child,
    &:nth-child(3n + 1) {
      margin-left: 0;
    }
  }

  @media (max-width: $breakpoint-small) {
    $width: 100%;
    width: $width;
    @include handleClaimTileGifThumbnail($width);
    margin-left: 0;

    &:not(:first-child) {
      margin-top: var(--spacing-s);
    }
  }
}
/* ... */

